updates readme to use intellij and maven